--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongoose": "^9.0.1"
+  },
+  "devDependencies": {
+    "vite": "^7.3.0"
   }
 }
